--- a/assets/scss/base/_common.scss
+++ b/assets/scss/base/_common.scss
@@ -181,10 +181,21 @@ body.lock {
         padding: 0 $container-padding;
         margin: 0 (-$container-padding);
         scroll-padding: 0 $container-padding;
-        scrollbar-width: none;
+        scroll-snap-type: x mandatory;
+        -webkit-overflow-scrolling: touch;
+        // scrollbar-width: none;
+        scrollbar-width: thin;
+        scrollbar-color: rgba($color-primary, 0.2) transparent;
 
         &::-webkit-scrollbar {
-            display: none;
+            // display: none;
+            height: 4px;
+            background-color: transparent;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background-color: rgba($color-primary, 0.3);
+            border-radius: 2px;
         }
 
         scroll-snap-type: x mandatory;
