--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -294,10 +294,23 @@
         width: 100%;
     }
 
+    @keyframes fadeInSlide {
+        from {
+            opacity: 0;
+            // transform: translateY(10px);
+        }
+
+        to {
+            opacity: 1;
+            // transform: translateY(0);
+        }
+    }
+
     &__item {
         width: auto;
         min-width: 408px;
         max-width: 408px;
+        animation: fadeInSlide 0.5s ease forwards;
 
         @include mobile {
             min-width: 300px;
@@ -314,12 +327,6 @@
     }
 
 
-
-    // .btn-wrapper {
-    //     display: flex;
-    //     justify-content: center;
-    //     align-items: center;
-    // }
 
     &__btn {
         align-self: center;
@@ -411,10 +418,19 @@
             gap: 10px;
             scroll-snap-type: x mandatory;
             -webkit-overflow-scrolling: touch;
-            scrollbar-width: none;
+            // scrollbar-width: none;
+            scrollbar-width: thin;
+            scrollbar-color: rgba($color-primary, 0.3) transparent;
 
             &::-webkit-scrollbar {
-                display: none;
+                // display: none;
+                height: 4px;
+                background-color: transparent;
+            }
+
+            &::-webkit-scrollbar-thumb {
+                background-color: rgba($color-primary, 0.3);
+                border-radius: 2px;
             }
         }
     }
